force-app/main/default/objects/KLWDocStage__c/KLWDocStage__c.object-meta.xml
<CustomObject>
    <label>KLW Doc Stage</label>
    <nameField>
        <label>Stage</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KLW Docs Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>