force-app/main/default/objects/KLWDocStage__c/fields/DocType__c.field-meta.xml
<CustomField>
    <fullName>DocType__c</fullName>
    <label>Doc Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draw</fullName>
                <label>Drawing</label>
            </value>
            <value>
                <fullName>Spec</fullName>
                <label>Specification</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>