force-app/main/default/objects/KLWDocStage__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>KLWDocStage__c</referenceTo>
    <relationshipLabel>KLW Docs Stages</relationshipLabel>
    <relationshipName>KLW_Docs_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>