force-app/main/default/objects/KLWDocStage__c/fields/StageEN__c.field-meta.xml
<CustomField>
    <fullName>StageEN__c</fullName>
    <label>Stage (EN)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>