force-app/main/default/objects/KLWDocStage__c/fields/StageRU__c.field-meta.xml
<CustomField>
    <fullName>StageRU__c</fullName>
    <label>Stage (RU)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>