force-app/main/default/objects/KLWDocStage__c/fields/StageUA__c.field-meta.xml
<CustomField>
    <fullName>StageUA__c</fullName>
    <label>Stage (UA)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>